package flyWeight;

/**
 * ClassName: ConcreteWebSite
 * Description:
 * date: 2021/12/5 下午7:49
 *
 * @author yimingyu
 * @version 1.0
 * @since JDK 1.8
 */
public abstract class ConcreteWebSite {

    public abstract void use(User user);
}
